# audio-event-detector

./: .gitignore  README.md  model_best.pt  pyproject.toml
scripts/: test_audio.py  test_dataset.py  test_features.py  test_install.py  test_model.py  test_torch_dataset.py  train_model.py
src/audio_event_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/audio_event_detector/dataset/: esc50.py  esc50_torch.py
src/audio_event_detector/features/: spectrogram.py
src/audio_event_detector/models/: cnn.py  evaluate.py  train.py
